fixed horizontal scroll, added viewport metatag

--- a/style/index.css
+++ b/style/index.css
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    max-width: 100% ;
 }
 
 html, body {
@@ -65,6 +66,15 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
+
+ /* ===== general styles ===== */
+
+.container {
+    width: 800px;
+    margin: 0 auto;
+}
+
+/* ===== header styles ===== */
 
 header{
     display: flex;
@@ -89,10 +99,9 @@ header{
     margin: 5% 0;
 }
 
-.container {
-    width: 800px;
-    margin: 0 auto;
-}
+
+
+ /* ===== top content ===== */
 
 .top-content {
     display: flex;
@@ -185,6 +194,8 @@ header{
     padding-right: 0;
 }
 
+ /* ===== footer styles ===== */
+
 footer {
     width: 100%;
     background: black;
@@ -202,4 +213,11 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+
+/* ===== tablet view ===== */
+
+@media(max-width: 800px){
+   
 }
